# serializer version: 1
# name: test_by_city[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 71.6,
      'nitrogen_dioxide': 1.6,
      'ozone': None,
      'pm10': 4.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_by_city[klundert]
  dict({
    'air_quality_index': 4,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 71.6,
      'nitrogen_dioxide': 1.6,
      'ozone': None,
      'pm10': 4.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_by_city[maarssen]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.20153, longitude=4.987444),
      'external_url': 'https://aqicn.org/city/netherland/breukelen/snelweg',
      'location': None,
      'name': 'Snelweg, Breukelen',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 77.5,
      'nitrogen_dioxide': 3.9,
      'ozone': 29.2,
      'pm10': 12.0,
      'pm25': 7.0,
      'pressure': 1008.4,
      'sulfur_dioxide': None,
      'temperature': 16.9,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 4586,
  })
# ---
# name: test_by_city[utrecht]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.101308, longitude=5.128183),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/griftpark',
      'location': None,
      'name': 'Griftpark, Utrecht',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 73.2,
      'nitrogen_dioxide': 0.7,
      'ozone': 29.4,
      'pm10': 12.0,
      'pm25': 1.0,
      'pressure': 1008.8,
      'sulfur_dioxide': 0.1,
      'temperature': 17.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6332,
  })
# ---
# name: test_get_by_coordinates
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.105031, longitude=5.124464),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/de-jongweg',
      'location': None,
      'name': 'de Jongweg, Utrecht',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 80.0,
      'nitrogen_dioxide': 2.3,
      'ozone': 29.4,
      'pm10': 12.0,
      'pm25': 17.0,
      'pressure': 1008.8,
      'sulfur_dioxide': None,
      'temperature': 16.0,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 4584,
  })
# ---
# name: test_get_by_ip
  dict({
    'air_quality_index': 26,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=52.3702157, longitude=4.8951679),
      'external_url': 'https://aqicn.org/city/amsterdam',
      'location': None,
      'name': 'Amsterdam',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': 2.3,
      'humidity': 69.5,
      'nitrogen_dioxide': 0.7,
      'ozone': 26.4,
      'pm10': 9.0,
      'pm25': 15.0,
      'pressure': 1016.4,
      'sulfur_dioxide': 0.2,
      'temperature': 17.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 5771,
  })
# ---
# name: test_get_by_name[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_get_by_name[klundert]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_get_by_station_number[372382]
  dict({
    'air_quality_index': 155,
    'attributions': list([
      dict({
        'logo': None,
        'name': 'Purple Air',
        'url': 'https://www.purpleair.com/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=47.616673, longitude=-122.33384),
      'external_url': 'https://aqicn.org/station/@372382',
      'location': 'Terry Avenue, Belltown, Seattle, King County, Washington, 98101, USA',
      'name': 'Building Cure',
    }),
    'dominant_pollutant': <Pollutant.PM25: 'pm25'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 38.0,
      'nitrogen_dioxide': None,
      'ozone': None,
      'pm10': 59.0,
      'pm25': 155.0,
      'pressure': None,
      'sulfur_dioxide': None,
      'temperature': 25.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 20, 19, 20, 22, tzinfo=datetime.timezone.utc),
    'station_id': -372382,
  })
# ---
# name: test_get_by_station_number[6337]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': Coordinates(latitude=51.6689355, longitude=4.541659),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'humidity': 71.6,
      'nitrogen_dioxide': 2.0,
      'ozone': None,
      'pm10': 5.0,
      'pm25': None,
      'pressure': 1018.0,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_search[failing_klundert]
  list([
    WAQISearchResult(air_quality_index=None, station_id=6337, station=Station(external_url='netherland/brabant/klundert', name='Klundert, Brabant', coordinates=Coordinates(latitude=51.6689355, longitude=4.541659))),
  ])
# ---
# name: test_search[klundert]
  list([
    WAQISearchResult(air_quality_index=4, station_id=6337, station=Station(external_url='netherland/brabant/klundert', name='Klundert, Brabant', coordinates=Coordinates(latitude=51.6689355, longitude=4.541659))),
  ])
# ---
# name: test_search[unknown]
  list([
  ])
# ---
